--- a/app/src/main/res/layout/a_welcome.xml
+++ b/app/src/main/res/layout/a_welcome.xml
@@ -13,7 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="111dp"
         android:layout_alignParentStart="true"
-        android:layout_alignTop="@+id/welcomeMessageTextView"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="41dp"
         android:layout_weight="1"
         android:adjustViewBounds="false"
         android:alpha="0.8"
@@ -29,7 +30,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="34dp"
+        android:layout_marginTop="56dp"
         android:focusable="true"
         android:text="WhatsApp Aplication"
         android:textSize="28sp" />
