--- a/app/src/main/res/layout/b_login.xml
+++ b/app/src/main/res/layout/b_login.xml
@@ -17,11 +17,24 @@
         android:id="@+id/editloginButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="221dp"
         android:text="LOGIN"
-        android:textColor="@color/orange" />
+        android:textColor="@color/orange"
+        android:textColorHint="@android:color/black" />
+
+    <ImageView
+        android:id="@+id/grayBackground"
+        android:layout_width="237dp"
+        android:layout_height="170dp"
+        android:layout_above="@+id/editloginButton"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="-221dp"
+        android:alpha="0.7"
+        android:baseline="@android:dimen/app_icon_size"
+        android:fadingEdge="horizontal|vertical"
+        android:paddingBottom="5dp"
+        android:src="@color/grey" />
 
     <EditText
         android:id="@+id/login_input"
@@ -30,30 +43,9 @@
 
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="170dp"
+        android:layout_marginTop="93dp"
         android:ems="10"
         android:inputType="textPersonName" />
-
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="110dp"
-        android:layout_height="30dp"
-        android:layout_above="@+id/login_input"
-        android:layout_alignStart="@+id/login_input"
-        android:layout_marginBottom="-169dp"
-        android:alpha="0.8"
-        android:fadingEdge="horizontal|vertical"
-        android:src="@color/grey" />
-
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="110dp"
-        android:layout_height="32dp"
-        android:layout_alignStart="@+id/login_input"
-        android:layout_alignTop="@+id/username_text"
-        android:alpha="0.8"
-        android:fadingEdge="horizontal|vertical"
-        android:src="@color/grey" />
 
     <EditText
         android:id="@+id/password_input"
@@ -61,7 +53,7 @@
         android:layout_height="39dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="93dp"
+        android:layout_marginTop="170dp"
         android:ems="10"
         android:inputType="textPassword" />
 
@@ -74,8 +66,7 @@
         android:layout_marginTop="58dp"
         android:text="Username:"
         android:textColor="@color/orange"
-        android:textSize="20sp"
-        android:textStyle="bold" />
+        android:textSize="20sp" />
 
     <TextView
         android:id="@+id/password_text"
@@ -86,8 +77,7 @@
         android:layout_marginBottom="-170dp"
         android:text="Password:"
         android:textColor="@color/orange"
-        android:textSize="20sp"
-        android:textStyle="bold" />
+        android:textSize="20sp" />
 
 
 </RelativeLayout>
