--- a/app/src/main/res/layout/c_registration.xml
+++ b/app/src/main/res/layout/c_registration.xml
@@ -16,19 +16,19 @@
             android:id="@+id/text_username"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginLeft="39dp"
+            android:layout_marginTop="39dp"
             android:text="Username:"
+            android:textAllCaps="false"
             android:textColor="@color/orange"
-            android:textSize="18sp"
-            android:textStyle="bold" />
+            android:textSize="18sp" />
 
         <EditText
             android:id="@+id/editText_username"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
+            android:layout_marginLeft="39dp"
+            android:layout_marginRight="39dp"
             android:layout_marginTop="2dp"
             android:ems="10"
             android:inputType="textPersonName"
@@ -38,18 +38,17 @@
             android:id="@+id/text_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
+            android:layout_marginLeft="39dp"
             android:text="Password:"
             android:textColor="@color/orange"
-            android:textSize="18sp"
-            android:textStyle="bold" />
+            android:textSize="18sp" />
 
         <EditText
             android:id="@+id/editText_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
+            android:layout_marginLeft="39dp"
+            android:layout_marginRight="39dp"
             android:layout_marginTop="2dp"
             android:ems="10"
             android:inputType="textPassword"
@@ -59,18 +58,17 @@
             android:id="@+id/text_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
+            android:layout_marginLeft="39dp"
             android:text="Name:"
             android:textColor="@color/orange"
-            android:textSize="18sp"
-            android:textStyle="bold" />
+            android:textSize="18sp" />
 
         <EditText
             android:id="@+id/editText_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
+            android:layout_marginLeft="39dp"
+            android:layout_marginRight="39dp"
             android:layout_marginTop="2dp"
             android:ems="10"
             android:inputType="textPersonName"
@@ -80,18 +78,17 @@
             android:id="@+id/text_surname"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
+            android:layout_marginLeft="39dp"
             android:text="Surname:"
             android:textColor="@color/orange"
-            android:textSize="18sp"
-            android:textStyle="bold" />
+            android:textSize="18sp" />
 
         <EditText
             android:id="@+id/editText_surname"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
+            android:layout_marginLeft="39dp"
+            android:layout_marginRight="39dp"
             android:layout_marginTop="2dp"
             android:ems="10"
             android:inputType="textPersonName"
@@ -101,18 +98,17 @@
             android:id="@+id/text_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
+            android:layout_marginLeft="39dp"
             android:text="E-mail:"
             android:textColor="@color/orange"
-            android:textSize="18sp"
-            android:textStyle="bold" />
+            android:textSize="18sp" />
 
         <EditText
             android:id="@+id/editText_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
+            android:layout_marginLeft="39dp"
+            android:layout_marginRight="39dp"
             android:layout_marginTop="2dp"
             android:ems="10"
             android:inputType="textEmailAddress"
@@ -122,15 +118,10 @@
             android:id="@+id/editregistrationButton"
             android:layout_width="121dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dip"
+            android:layout_marginLeft="39dip"
             android:layout_marginRight="10dip"
             android:text="REGISTER"
             android:textColor="@color/orange" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"></LinearLayout>
 
     </LinearLayout>
 
