--- a/client/app/src/main/res/layout/c_registration.xml
+++ b/client/app/src/main/res/layout/c_registration.xml
@@ -24,7 +24,7 @@
             android:textSize="18sp" />
 
         <EditText
-            android:id="@+id/editText_username"
+            android:id="@+id/username_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="39dp"
@@ -44,7 +44,7 @@
             android:textSize="18sp" />
 
         <EditText
-            android:id="@+id/editText_password"
+            android:id="@+id/password_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="39dp"
@@ -64,7 +64,7 @@
             android:textSize="18sp" />
 
         <EditText
-            android:id="@+id/editText_name"
+            android:id="@+id/name_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="39dp"
@@ -84,7 +84,7 @@
             android:textSize="18sp" />
 
         <EditText
-            android:id="@+id/editText_surname"
+            android:id="@+id/surname_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="39dp"
@@ -104,7 +104,7 @@
             android:textSize="18sp" />
 
         <EditText
-            android:id="@+id/editText_email"
+            android:id="@+id/email_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="39dp"
