--- a/client/app/src/main/res/layout/e_messages.xml
+++ b/client/app/src/main/res/layout/e_messages.xml
@@ -1,22 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:id="@+id/messages"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:background="@drawable/background_picture"
-              android:orientation="vertical">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/messages"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:alpha="1"
+    android:background="@drawable/mail"
+    android:orientation="vertical"
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp">
 
     <TextView
         android:id="@+id/title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="364dp"
+        android:layout_height="48dp"
         android:layout_marginBottom="10dp"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
+        android:alpha="0.7"
+        android:background="@android:color/holo_blue_light"
         android:text="The messages:"
         android:textColor="@color/black"
-        android:textSize="28dp"/>
+        android:textSize="28dp" />
 
 
     <ListView
@@ -25,34 +32,39 @@
         android:layout_height="0dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
+        android:layout_marginBottom="3dp"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
         android:layout_weight="1"
         android:cacheColorHint="@android:color/transparent"
         android:divider="@android:color/transparent"
-        android:dividerHeight="4dp"/>
+        android:dividerHeight="4dp"
+        android:stackFromBottom="true"
+        android:transcriptMode="alwaysScroll" />/>
 
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="348dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
         android:layout_marginLeft="10dp"
-        android:layout_marginTop="20dip"
-        android:background="@color/grey">
+        android:layout_marginRight="10dp"
+        android:background="@color/grey"
+        android:paddingRight="10dp">
 
         <EditText
             android:id="@+id/input"
-            android:layout_width="200dip"
-            android:layout_height="50dip"
-            android:background="@color/grey"
+            android:layout_width="252dp"
+            android:layout_height="30dip"
+            android:alpha="0.5"
+            android:background="#80d3d3d3"
             android:gravity="top"
             android:hint="Type text here"
             android:inputType="textCapSentences|textMultiLine"
+            android:paddingBottom="3dp"
             android:paddingLeft="4dp"
-            android:paddingTop="10dp"
             android:text=""
-            android:textColor="@color/orange"/>
+            android:textColor="@color/orange" />
 
         <!-- without: android:inputType is multi-line by default (CR instead of DONE softkey)
                       android:inputType="textCapSentences|textAutoCorrect"
@@ -61,11 +73,11 @@
 
         <Button
             android:id="@+id/mybutton"
-            android:layout_width="wrap_content"
+            android:layout_width="68dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
+            android:layout_gravity="center_vertical|center_horizontal"
             android:onClick="sendText"
-            android:text="Send"/>
+            android:text="Send" />
 
     </LinearLayout>
 
