add log out button

--- a/client/app/src/main/res/layout/d_userslist.xml
+++ b/client/app/src/main/res/layout/d_userslist.xml
@@ -3,22 +3,36 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/usersList"
-              android:layout_width="fill_parent"
-              android:layout_height="fill_parent"
-              android:background="@drawable/background_picture"
-              android:focusable="true"
-              android:orientation="vertical">
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="@drawable/usersmail"
+    android:focusable="true">
 
 
-    <ListView
-        android:id="@+id/listView"
-        android:layout_width="fill_parent"
-        android:layout_height="0dip"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_weight="1"
-        android:background="@drawable/usersmail">
+        android:orientation="horizontal">
+
+        <ListView
+            android:id="@+id/listView"
+            android:layout_width="284dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
 
 
-    </ListView>
+        </ListView>
+
+        <Button
+            android:id="@+id/button3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="4dp"
+            android:layout_marginTop="8dp"
+            android:layout_weight="1"
+            android:text="Log out" />
+    </LinearLayout>
 
 </LinearLayout>
   
