--- a/client/app/src/main/res/layout/d_userslist.xml
+++ b/client/app/src/main/res/layout/d_userslist.xml
@@ -25,7 +25,7 @@
         </ListView>
 
         <Button
-            android:id="@+id/button3"
+            android:id="@+id/logOutButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="4dp"
