--- a/client/app/src/main/res/layout/e_messages.xml
+++ b/client/app/src/main/res/layout/e_messages.xml
@@ -14,10 +14,10 @@
 
     <TextView
         android:id="@+id/title"
-        android:layout_width="364dp"
-        android:layout_height="48dp"
+        android:layout_width="356dp"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
-        android:layout_marginLeft="10dp"
+        android:layout_marginLeft="5dp"
         android:layout_marginTop="10dp"
         android:alpha="0.7"
         android:background="@android:color/holo_blue_light"
@@ -44,25 +44,22 @@
 
 
     <LinearLayout
-        android:layout_width="348dp"
+        android:layout_width="328dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="10dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:background="@color/grey"
-        android:paddingRight="10dp">
+        android:background="@android:drawable/editbox_dropdown_light_frame">
 
         <EditText
             android:id="@+id/input"
-            android:layout_width="252dp"
-            android:layout_height="30dip"
+            android:layout_width="245dp"
+            android:layout_height="match_parent"
             android:alpha="0.5"
             android:background="#80d3d3d3"
-            android:gravity="top"
+            android:gravity="top|left"
             android:hint="Type text here"
             android:inputType="textCapSentences|textMultiLine"
-            android:paddingBottom="3dp"
-            android:paddingLeft="4dp"
             android:text=""
             android:textColor="@color/orange" />
 
@@ -74,9 +71,11 @@
         <Button
             android:id="@+id/mybutton"
             android:layout_width="68dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical|center_horizontal"
+            android:layout_height="40dp"
+            android:layout_gravity="center_horizontal"
+            android:gravity="center_horizontal"
             android:onClick="sendText"
+            android:paddingRight="10dp"
             android:text="Send" />
 
     </LinearLayout>
