--- a/client/app/src/main/res/layout/e_messages.xml
+++ b/client/app/src/main/res/layout/e_messages.xml
@@ -29,7 +29,7 @@
     <ListView
         android:id="@+id/conversation"
         android:layout_width="fill_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="3dp"
@@ -60,6 +60,7 @@
             android:gravity="top|left"
             android:hint="Type text here"
             android:inputType="textCapSentences|textMultiLine"
+            android:paddingRight="2dp"
             android:text=""
             android:textColor="@color/orange" />
 
@@ -71,11 +72,14 @@
         <Button
             android:id="@+id/mybutton"
             android:layout_width="68dp"
-            android:layout_height="40dp"
+            android:layout_height="37dp"
             android:layout_gravity="center_horizontal"
+            android:foregroundGravity="center_horizontal"
             android:gravity="center_horizontal"
             android:onClick="sendText"
+            android:paddingBottom="5dp"
             android:paddingRight="10dp"
+            android:paddingTop="5dp"
             android:text="Send" />
 
     </LinearLayout>
