--- a/client/app/src/main/res/layout/a_welcome.xml
+++ b/client/app/src/main/res/layout/a_welcome.xml
@@ -37,12 +37,14 @@
 
     <ImageView
         android:id="@+id/welcomeLogoImageView"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
+        android:layout_margin="0dp"
         android:adjustViewBounds="true"
         android:alpha="0.8"
+        android:padding="0dp"
         android:src="@drawable/coms" />
 
     <LinearLayout
